@@ -6,7 +6,7 @@
   ],
   "depends": [
     "CSS::Module:ver<0.5.3+>",
-    "CSS::Properties:ver<0.6.3+>",
+    "CSS::Properties:ver<0.6.5+>",
     "CSS::Selector::To::XPath",
     "LibXML:ver<0.5.14+>",
     "Method::Also"
