@@ -39,9 +39,9 @@ my CSS $css .= new: :$doc, :$tag-set, :inherit;
 
 is $css.rulesets.keys.sort.join(','), '/html/body,/html/body/div,/html/body/h1[1],/html/body/p';
 
-is $css.style('/html/body'), 'background-color:powderblue; display:block; font-size:12pt; margin:8px; unicode-bidi:embed;';
+is $css.style('/html/body'), 'background:powderblue; display:block; font-size:12pt; margin:8px; unicode-bidi:embed;';
 is $css.style('/html/body/h1[1]'), 'color:blue; display:block; font-size:2em; font-weight:bolder; margin-bottom:0.67em; margin-top:0.67em; unicode-bidi:embed;';
-is $css.style('/html/body'), 'background-color:powderblue; display:block; font-size:12pt; margin:8px; unicode-bidi:embed;';
+is $css.style('/html/body'), 'background:powderblue; display:block; font-size:12pt; margin:8px; unicode-bidi:embed;';
 is $css.style('/html/body/div'), 'color:green; display:block; font-size:10pt; unicode-bidi:embed;';
 is $css.style('/html/body/h2[1]'), 'display:block; font-size:9pt; font-weight:bolder; margin-bottom:0.75em; margin-top:0.75em; unicode-bidi:embed;';
 is $css.style('/html/body/h2[2]'), 'direction:rtl; display:table; font-size:1.5em; font-weight:bolder; margin-bottom:0.75em; margin-top:0.75em; unicode-bidi:embed;';
@@ -49,7 +49,7 @@ is $css.style('/html/body/hr'), '-xhtml-align:center; border:1px inset; display:
 is $css.style('/html/body/p'), 'color:red; display:none; font-size:12pt; margin-bottom:1.12em; margin-top:1.12em; unicode-bidi:embed;';
 
 is-deeply $css.Str.lines, (
-    'body { background-color:powderblue; font-size:12pt; }',
+    'body { background:powderblue; font-size:12pt; }',
     '@media screen {',
     '  h1:first-child { color:blue; }',
     '}',
