@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Adjust tests for CSS::Properties v0.6.5+
 
 0.0.10  2021-04-02T11:33:39+13:00
     - Completion of CSS::TagSet::Pango
